Вроде исправила все кроме add и remove